# mecha-language-server

./: .gitignore  LICENSE  README.md  build.bat  build_extension.sh  build_zipapp.sh  preamble.py  pyproject.toml
.github/workflows/: main.yml
aegis/: semantics.py
aegis-core/: pyproject.toml
aegis-core/aegis_core/indexing/: project_index.py
aegis-jetbrains/: CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
aegis-jetbrains/.run/: Run Plugin.run.xml  Run Tests.run.xml  Run Verifications.run.xml
aegis-server/: pyproject.toml
aegis-server/aegis_server/: __main__.py
aegis-server/aegis_server/providers/: __init__.py  generic.py  resource_location.py  variable.py
aegis-server/aegis_server/server/: __init__.py  indexing.py
aegis-server/aegis_server/server/features/: completion.py  definition.py  diagnostics.py  helpers.py  hover.py  references.py  rename.py  semantics.py  validate.py
aegis-server/aegis_server/server/patches/: __init__.py
aegis-server/aegis_server/server/shadows/: context.py  pipeline.py  project_builder.py
aegis-server/tests/: test_validation.py
aegis-vscode/: .releaserc  .vscodeignore  package-lock.json  package.json  tsconfig.json
aegis-vscode/src/: extension.ts
aegis/ast/: helpers.py  metadata.py
aegis/ast/features/: __init__.py  provider.py  resource_location.py  variable.py
aegis/indexing/: __init__.py  project_index.py
aegis/reflection/: __init__.py
aegis_server/: __main__.py
aegis_server/server/: __init__.py  indexing.py
aegis_server/server/features/: __init__.py  completion.py  definition.py  diagnostics.py  helpers.py  hover.py  references.py  rename.py  semantics.py  validate.py
aegis_server/server/patches/: __init__.py  feature_providers.py
aegis_server/server/shadows/: compile_document.py  context.py  project_builder.py
aegis_server/tests/: test_validation.py
aegis_vscode/: README.md
aegis_vscode/src/: extension.ts
extension/: .vscodeignore  README.md  clean_zipapp.js  package-lock.json  package.json
extension/src/: extension.ts
language_server/: __init__.py  __main__.py  mecha.py
language_server/server/: __init__.py  indexing.py  shadows.py
language_server/server/features/: __init__.py  completion.py  definition.py  diagnostics.py  helpers.py  hover.py  references.py  rename.py  (+2 more)
language_server/tests/: test_validation.py
tests/: beet.yaml  foo.mcfunction  macros.bolt  use.bolt
tests/foo/: baz3.mcfunction
(+32 files in other folders)
