[tool.poetry]
name = "language_server"
version = "0.1.0"
description = "mecha based language server for mcfunction"
authors = ["TheNuclearNexus <39636175+TheNuclearNexus@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mecha = {path = "../mecha", develop = true}
pygls = "^1.3.1"
bolt = {path = "../bolt", develop = true}
pytest = "^8.1.1"

[tool.poetry.group.dev.dependencies]
bolt-selectors = "^0.2.0"
bolt-expressions = "^0.18.0"
isort = "^6.0.0"
black = "^25.1.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
