[tool.poetry]
name = "aegis_server"


version = "0.0.0"
description = "A language server implementation leveraging the aegis library"
authors = [
    "TheNuclearNexus <39636175+TheNuclearNexus@users.noreply.github.com>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mecha = { path = "../../mecha", develop = true }
pygls = "^1.3.1"
bolt = { path = "../../bolt", develop = true }
aegis_core = { path = "../aegis-core", develop = true }

[tool.poetry.group.dev.dependencies]
isort = "^6.0.0"
black = "^25.1.0"
pytest = "^8.1.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
